--- a/MP3.html
+++ b/MP3.html
@@ -105,17 +105,13 @@
 
             </div>
 
-            <p>
-                I think I have implemented almost all the basic functionality of Tetris, besides allowing blocks to rotate. 
-                As I mentioned earlier, I'm planning on continuing to work on this gmae for my final project, and my end goal 
-                is to record player statistics and build additional features that leverage this data, which could include.
-            </p>
+
 
             <div class= "writeupdiv"> 
                 <h2>Ideas & Future</h2>
                 <p>
                     I think I have implemented almost all the basic functionality of Tetris, besides allowing blocks to rotate. 
-                    As I mentioned earlier, I'm planning on continuing to work on this gmae for my final project, and my end goal 
+                    As I mentioned earlier, I'm planning on continuing to work on this game for my final project, and my end goal 
                     is to record player statistics and build additional features that leverage this data, which could include:
                 </p>
     
