--- a/MP3.html
+++ b/MP3.html
@@ -11,7 +11,7 @@
 
 
         <div class="navbar">
-            <a class="name" href="#home">Ethan Sylvia</a>
+            <a class="name" href="./frontpage.html">Ethan Sylvia</a>
             <div class="navbar-right">
                 <a href="./gallery.html">Gallery Page</a>
                 <a href="./cheatsheet.html">Cheat Sheet</a>
