--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -25,6 +25,7 @@
                     <a href="./MP1.html">MP1</a>
                     <a href="./MP2.html">MP2</a>
                     <a href="./MP3.html">MP3</a>
+                    <a href="./FP0.html">FP0</a>
                 </div>
             </div>
 
