--- a/FP0.html
+++ b/FP0.html
@@ -56,9 +56,9 @@
             <div class= "writeupdiv"> 
 
             
-            <h1>1. Prototype Version</h1>
+            <h1>Prototype Version</h1>
 
-                <h2>Rotating Tetris Blocks</h2>
+                <h2>1. Rotating Tetris Blocks</h2>
                 <p>
                     The last feature core feature of Tetris that my game lacks so far 
                     are controls for allowing blocks to rotate. Currently, the pattern for which
