--- a/FP0.html
+++ b/FP0.html
@@ -27,6 +27,7 @@
                         <a href="./MP2.html">MP2</a>
                         <a href="./MP3.html">MP3</a>
                         <a href="./FP0.html">FP0</a>
+                        <a href="./FP1.html">FP1</a>
                     </div>
                 </div>
 
