--- a/about.html
+++ b/about.html
@@ -25,12 +25,14 @@
                         <a href="./MP1.html">MP1</a>
                         <a href="./MP2.html">MP2</a>
                         <a href="./MP3.html">MP3</a>
+                        <a href="./FP0.html">FP0</a>
+                        <a href="./FP1.html">FP1</a>
+
                     </div>
                 </div>
 
             </div>
         </div>
-
         
         <div class = content>
             <h1>ABOUT ME</h1>
