--- a/frontpage.html
+++ b/frontpage.html
@@ -5,34 +5,22 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet">        
         <link rel="stylesheet" href="styles.css">   
+        <link rel="icon" type="image/x-icon" href="./favicon.png">
+        <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
     </head>
 
     <body>
 
-        <div class="navbar">
-            <a class="name" href="./frontpage.html">Ethan Sylvia</a>
-            <div class="navbar-right">
-                <a href="./gallery.html">Gallery Page</a>
-                <a href="./cheatsheet.html">Cheat Sheet</a>
-                <a href="./about.html">About Me</a>
 
-                <div class="dropdown">
-                    <button class="dropdownbtn"> 
-                        Writeups 
-                    </button>
-                    <div class="dropdown-content">
-                        <a href="./MP0.html">MP0</a>
-                        <a href="./MP1.html">MP1</a>
-                        <a href="./MP2.html">MP2</a>
-                        <a href="./MP3.html">MP3</a>
-                        <a href="./FP0.html">FP0</a>
-                        <a href="./FP1.html">FP1</a>
+          <div id="nav-placeholder">
 
-                    </div>
-                </div>
-
-            </div>
-        </div>
+          </div>
+          
+          <script>
+          $(function(){
+            $("#nav-placeholder").load("nav.html");
+          });
+          </script>
 
         <div class = front>
             <h1>HELLO, I AM ETHAN</h1>
@@ -52,7 +40,7 @@
                     </p>    
                 </div>
                 <div class="image">
-                    <img src="Frame 23 1.png">
+                    <img src="Frame 23 1.png" alt = "Data visualization project">
                 </div>
             </div>
 
@@ -67,7 +55,7 @@
                     </p>    
                 </div>
                 <div class="image">
-                    <img src="Frame 114.png">
+                    <img src="Frame 114.png" alt = "Juvenile portal project">
                 </div>
             </div>
 
