--- a/nav.html
+++ b/nav.html
@@ -31,16 +31,16 @@
                 <ul>
                     <li><a href="./FP0.html">FP0</a></li>
                     <li><a href="./FP1.html">FP1</a></li>
-                    <li><a href="#">FP2</a></li>
+                    <li><a href="./FP2.html">FP2</a></li>
                 </ul>
                 </li>
             </ul>
             </li>
 
             <li><a href="./gallery.html">Gallery Page</a></li>
+            <li><a href="https://ethans244.github.io/sign-in-fp2/">Final Project</a></li>
             <li><a href="./cheatsheet.html">Cheat Sheet</a></li>
             <li><a href="./about.html">About Me</a></li>
-
         </ul>
     </nav>
 
